modules/org.restlet/learn/guide/2.1/extensions/editions-matrix.md
Editions matrix
===============

Introduction
============

This table presents the list of extensions provided by the [various
editions of the Restlet
Framework](http://wiki.restlet.org/docs_2.1/13-restlet/275-restlet.html "Part III - Restlet Editions").

The core module including both the Restlet API and the Restlet Engine is
shipped by all editions.

Extensions availability
=======================

Extensions

[Android](http://wiki.restlet.org/docs_2.1/13-restlet/275-restlet/266-restlet.html "Restlet edition for Android")

[GAE](http://wiki.restlet.org/docs_2.1/13-restlet/275-restlet/252-restlet.html "Restlet edition for Google App Engine")

[GWT](http://wiki.restlet.org/docs_2.1/13-restlet/275-restlet/144-restlet.html "Restlet edition for Google Web Toolkit")

[JEE](http://wiki.restlet.org/docs_2.1/13-restlet/275-restlet/312-restlet.html "Restlet edition for Java EE")

[JSE](http://wiki.restlet.org/docs_2.1/13-restlet/275-restlet/311-restlet.html "Restlet edition for Java SE")

Description

[org.restlet.ext.atom](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/65-restlet.html "Atom extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for the Atom syndication and the AtomPub (Atom Publication
Protocol) standards in their 1.0 version.

[org.restlet.ext.crypto](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/314-restlet.html "Crypto extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for cryptography.

[org.restlet.ext.emf](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/413-restlet.html "EMF")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Eclipse Modeling Framework.

[org.restlet.ext.fileupload](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/64-restlet.html "Apache FileUpload extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Apache FileUpload.

[org.restlet.ext.freemarker](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/66-restlet.html "FreeMarker extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with FreeMarker.

[org.restlet.ext.gae](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/405-restlet.html "GAE extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration to the Google App Engine UserService for the GAE edition.

[org.restlet.ext.gwt](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/315-restlet.html "GWT extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Server-side integration with GWT.

[org.restlet.ext.html](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/412-restlet.html "HTML")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for the HTML (HyperText Markup Language) standard in its 4.0
version and above.

[org.restlet.ext.httpclient](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/75-restlet.html "Apache HTTP Client extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Apache Commons HTTP Client.

[org.restlet.ext.jaas](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/67-restlet.html "JAXB extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for JAAS based security.

[org.restlet.ext.jackson](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/299-restlet.html "Jackson extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Jackson.

[org.restlet.ext.javamail](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/76-restlet.html "JavaMail extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with JavaMail.

[org.restlet.ext.jaxb](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/67-restlet.html "JAXB extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Java XML Binding.

[org.restlet.ext.jaxrs](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/57-restlet.html "JAX-RS extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Implementation of JAX-RS (JSR-311)

[org.restlet.ext.jdbc](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/77-restlet.html "JDBC extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Java DataBase Connectivity (JDBC).

[org.restlet.ext.jetty](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/78-restlet.html "Eclipse Jetty extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Jetty.

[org.restlet.ext.jibx](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/68-restlet.html "JiBX extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with JiBX.

[org.restlet.ext.json](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/69-restlet.html "JSON extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for JSON representations.

[org.restlet.ext.lucene](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/229-restlet.html "Lucene extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Apache Lucene, Solr and Tika sub-projects.

[org.restlet.ext.net](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/79-restlet.html "Net extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with java.net.HttpURLConnection class.

[org.restlet.ext.oauth](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/392-restlet.html "OAuth")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for OAuth HTTP authentication.

[org.restlet.ext.odata](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/287-restlet.html "OData extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with OData services.

[org.restlet.ext.openid](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/404-restlet.html "OpenID")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for OpenID authentication.

[org.restlet.ext.rdf](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/270-restlet.html "RDF extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for the RDF parsing and generation.

[org.restlet.ext.rome](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/242-restlet.html "ROME extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for syndicated representations via the ROME library.

[org.restlet.ext.sdc](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/400-restlet.html "SDC extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Google Secure Data Connector on the cloudside.

[org.restlet.ext.servlet](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/81-restlet.html "Servlet extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Servlet API.

[org.restlet.ext.simple](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/82-restlet.html "Simple Framework extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Simple framework.

[org.restlet.ext.sip](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/390-restlet.html "SIP extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for Session Initiation Protocol (SIP).

[org.restlet.ext.slf4j](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/316-restlet.html "SLF4J extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for the SLF4J logging bridge.

[org.restlet.ext.spring](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/70-restlet.html "Spring extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Spring Framework.

[org.restlet.ext.ssl](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/153-restlet.html "SSL extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Utilities to configure SSL support.

[org.restlet.ext.velocity](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/71-restlet.html "Velocity extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with Apache Velocity.

[org.restlet.ext.wadl](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/72-restlet.html "WADL extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for the WADL specification.

[org.restlet.ext.xdb](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/84-restlet.html "Oracle XDB Restlet Adapter")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration within OracleJVM via the Oracle XML DB feature.

[org.restlet.ext.xml](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/317-restlet.html "XML extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Support for the XML documents.

[org.restlet.ext.xstream](http://wiki.restlet.org/docs_2.1/13-restlet/28-restlet/264-restlet.html "XStream extension")

![accept](Editions%20matrix-313_files/accept.html "accept")

![accept](Editions%20matrix-313_files/accept.html "accept")

Integration with XStream.

